# ABB_omnicore_ros_driver

./: .gitignore  README.md
Doc/: GoFa_DH_parameters.xlsx
abb_driver/config/: gofa_cfg.yaml
abb_driver/src/: controller_bridge.cpp
abb_libegm/src/: egm.pb.cc  egm_wrapper.pb.cc
abb_librws/: CMakeLists.txt
abb_librws/src/: rws_common.cpp  rws_state_machine_interface.cpp
abb_wrapper_control/: CMakeLists.txt  package.xml
abb_wrapper_control/configs/: control_server_params.yaml  task_sequences_params.yaml
abb_wrapper_control/include/abb_wrapper_control/: Abb_client.h  ArmControl.h  ArmControl_trial.h  JointPlan.h  PoseCamera.h  PosePlan.h  SlerpPlan.h  TaskSequencer.h
abb_wrapper_control/launch/: launchCollisionObject.launch  launchControlServer.launch  launchTaskServer.launch  launchTaskServerExample.launch  launchTaskServerTemplate.launch
abb_wrapper_control/src/: Abb_client.cpp  ArmControl.cpp  ArmControl_trial.cpp  JointPlan.cpp  PoseCamera.cpp  PosePlan.cpp  SdfToPlanningScene.cpp  SlerpPlan.cpp  TaskSequencer.cpp  control_server.cpp  task_server.cpp  task_server_example.cpp  task_server_template.cpp
abb_wrapper_control/worlds/: abb.world
abb_wrapper_msgs/: CMakeLists.txt  package.xml
abb_wrapper_msgs/srv/: arm_control.srv  arm_wait.srv  joint_plan.srv  pose_camera.srv  slerp_plan.srv
gazebo_omnicore/: CMakeLists.txt  package.xml
gazebo_omnicore/launch/: gazebo.launch  gofa.launch  yumi_single_arm.launch
gazebo_omnicore/urdf/: gofa.urdf  gofa.xacro  yumi.xacro
gazebo_omnicore/worlds/: industrial.world
gazebo_ros_abb_wrapper/: CMakeLists.txt  package.xml
gazebo_ros_abb_wrapper/config/: controllers.yaml  yumi_gripper.yaml  yumi_single_arm.yaml
gazebo_ros_abb_wrapper/launch/: challenge_scene.launch  yumi_single_arm.launch
gazebo_ros_abb_wrapper/models/challenge_base/: model.config  model.sdf
gazebo_ros_abb_wrapper/models/challenge_base/mesh/: challenge_base.stl
gazebo_ros_abb_wrapper/models/challenge_crown/: model.config  model.sdf
gazebo_ros_abb_wrapper/models/challenge_crown/mesh/: challenge_crown.stl
gazebo_ros_abb_wrapper/models/challenge_pivot/: model.config  model.sdf
gazebo_ros_abb_wrapper/models/challenge_pivot/mesh/: challenge_pivot.stl
gazebo_ros_abb_wrapper/models/challenge_satellite_gear1/: model.config  model.sdf
gazebo_ros_abb_wrapper/models/challenge_satellite_gear1/mesh/: challenge_satellite_gear1.stl
gazebo_ros_abb_wrapper/models/challenge_satellite_gear2/: model.config  model.sdf
gazebo_ros_abb_wrapper/models/challenge_satellite_gear2/mesh/: challenge_satellite_gear2.stl
gazebo_ros_abb_wrapper/models/challenge_sun_wheel/: model.config  model.sdf
gazebo_ros_abb_wrapper/models/challenge_sun_wheel/mesh/: challenge_sun_wheel.stl
gazebo_ros_abb_wrapper/models/challenge_table/: model.config  model.sdf
gazebo_ros_abb_wrapper/models/challenge_table/mesh/: challenge_tray.stl
gazebo_ros_abb_wrapper/models/challenge_tray/: model.config  model.sdf
gazebo_ros_abb_wrapper/scripts/: publisher.py
gazebo_ros_abb_wrapper/urdf/: yumi.xacro
gofa_launcher/: CMakeLists.txt  package.xml
gofa_launcher/launch/: real_robot.launch
gofa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gofa_moveit_config/config/: ompl_planning.yaml  ros_controllers.yaml
gofa_moveit_config/launch/: demo.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  stomp_planning_pipeline.launch.xml
irim_ss_pkg/: CMakeLists.txt  package.xml
irim_ss_pkg/config/: moveit.rviz  yumi_controllers.yaml
irim_ss_pkg/launch/: yumi_display.launch  yumi_gazebo.launch  yumi_gazebo_stefano.launch
irim_ss_pkg/meshes/Dice/: Die-OBJ.mtl
irim_ss_pkg/scripts/: dice.py  gripper_simulation.py  move_group_interface.py  vision.py
irim_ss_pkg/xacro/: irim_yumi.urdf.xacro
irim_ss_pkg/xacro/Extra/: camera_stand.xacro  dice.urdf  surface.xacro  table.xacro
moveit_config/yumi_single_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ni_wrapper/: CMakeLists.txt  package.xml
ni_wrapper/config/: comm_param.yaml
ni_wrapper/launch/: ni_wrapper.launch
ni_wrapper/src/: ni_wrapper_node.py  server_listener.py
omnicore_bringup/: CMakeLists.txt  package.xml
omnicore_bringup/launch/: real_robot.launch  simulated_robot.launch  start.launch  start_robot_demo.launch  start_robot_gazebo.launch  start_robot_real.launch
omnicore_description/: CMakeLists.txt  package.xml
omnicore_description/config/: rviz.rviz
omnicore_description/launch/: display.launch  test.launch  upload.launch
omnicore_description/xacro/: robot.urdf.xacro  robot_macro.xacro
omnicore_gazebo/: CMakeLists.txt  package.xml
omnicore_gazebo/launch/: gazebo.launch
omnicore_gazebo/scripts/: gripper_handler.py
omnicore_gazebo/urdf/: gofa.xacro  yumi_single_arm.xacro
omnicore_interface/: CMakeLists.txt  package.xml
omnicore_interface/msg/: OmnicoreState.msg
omnicore_interface/srv/: moveJ_rapid.srv  moveL_rapid.srv  move_gripper_to.srv  set_digital_output.srv
omnicore_launcher/: CMakeLists.txt  package.xml
omnicore_launcher/config/: config.rviz  config_no_moveit.rviz
omnicore_launcher/launch/: real_robot.launch  simulated_robot.launch
omnicore_moveit_config/gofa_10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
omnicore_moveit_config/gofa_12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
omnicore_moveit_config/gofa_5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
omnicore_moveit_config/gofa_moveit_config/: .setup_assistant  (+1 more)
omnicore_ros_control/: CMakeLists.txt  package.xml
ros_control_gofa/: CMakeLists.txt  package.xml
ros_control_omnicore/: CMakeLists.txt  package.xml
rws_service/: CMakeLists.txt  package.xml
rws_services/: CMakeLists.txt  package.xml
schunk_ros_interface/: LICENSE  ReadMe.md
schunk_ros_interface/schunk_interfaces/: CMakeLists.txt  package.xml
schunk_ros_interface/schunk_interfaces/msg/: SchunkGripperMsg.msg
schunk_ros_interface/schunk_interfaces/srv/: JogTo.srv  Release.srv  SimpleGrip.srv
(+271 files in other folders)
