<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_abb_wrapper</name>
  <version>1.3.1</version>
  <description>
      ROS package for gazebo.
  </description>

  <author>Andrea Pupa</author>
  <maintainer email="andrea.pupa@unimore.it">Andrea Pupa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
<!-- 
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/worlds/apple_field"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds/apple_field"/>  
  </export> -->
</package>
